# app/presentation/products/handler.go
@@ -1,0 +1,8 @@
+// PostProducts godoc
+// @Summary 商品を保存する
+// @Tags products
+// @Accept json
+// @Produce json
+// @Param request body PostProductsParams true "登録商品"
+// @Success 201 {object} postProductResponse
+// @Router /v1/products [post]
